[metadata]
name = instagram
version = attr: insta.version
description = IG connector using instaloader API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/thevickypedia/instagram

[bdist_wheel]
universal = 1

[options]
packages = find:
install_requires =
    instaloader==4.7.1
    requests==2.25.1
    click==8.0.1
    python-dotenv==0.19.0

[flake8]
ignore = D100
max_line_length = 100
exclude =
    # this is generally an empty file.
    __init__.py

# install flake8-docstrings
docstring_convention = google

# install flake8-sfs
extend_ignore=SFS3,D107

[isort]